<!-- Layout crear canvas - info inicial -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.umb.InicialCanvasActivity" >

    <TextView
        style="@style/tipoFuente.resaltado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_informacion" />

    <TextView
        style="@style/tipoFuente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        style="@style/tipoFuente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_descripcion" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        style="@style/tipoFuente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_autor" />

    <EditText
        android:id="@+id/txtAutor"
        style="@style/tipoFuente.cajastexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="text"
        />

    

</LinearLayout>