<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas1"
                android:onClick="cliccanvas_1" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo1boton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas2"
                android:onClick="cliccanvas_2" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo2boton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas3"
                android:onClick="cliccanvas_3" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo3boton" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas4"
                android:onClick="cliccanvas_4" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo4boton" />
        </LinearLayout>

       <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas5"
                android:onClick="cliccanvas_5" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo5boton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas6"
                android:onClick="cliccanvas_6" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo6boton" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas7"
                android:onClick="cliccanvas_7" />

           <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo7boton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas8"
                android:onClick="cliccanvas_8" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo8boton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0.33" 
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/crearcanvas_9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:background="@drawable/icono_crearcanvas9"
                android:onClick="cliccanvas_9" />

            <TextView
                style="@style/tipoFuente.botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/titulo9boton" />
        </LinearLayout>
    </TableRow>

</TableLayout>
</ScrollView>