<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="0.33"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icono_crearidea"
                    android:onClick="clicCrearCanvas" 
                    
                    />

                <TextView
                    android:id="@+id/titulo1boton"
                    style="@style/tipoFuente.botones"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:gravity="center"
                    android:text="@string/principal_crear_nueva_idea" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="0.33"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnListaCanvas"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center|top"
                    android:background="@drawable/icono_tusideas"
                    android:onClick="clicListaCanvas" />

                <TextView
                    android:id="@+id/titulo2boton"
                    style="@style/tipoFuente.botones"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:gravity="center"
                    android:text="@string/principal_listar_ideas" />
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="0.33"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnAyuda"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center|top"
                    android:background="@drawable/icono_ayuda"
                    android:onClick="clicListaCanvas" />

                <TextView
                    android:id="@+id/titulo3boton"
                    style="@style/tipoFuente.botones"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:gravity="center"
                    android:text="@string/principal_ayuda" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>